--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-md-6">
-      <h3>PESQUISA ENGAGEMENT + CENSO 2024</h3>
+      <h3>PESQUISA ENGAGEMENT H1 & SERVIÇOS GERAIS 2025</h3>
       <h2>&nbsp;</h2>
 
-      <p style="font-size: 12px;"><strong>Vigência de 01 de Novembro à 30 de Novembro de 2024</strong></p>
+      <p style="font-size: 12px;"><strong>Vigência de 01 de Abril à 30 de Abril de 2025.</strong></p>
       <br>
       <p style="font-size: 12px;">Informe o código de oito dígitos fornecido e clique em "Iniciar Pesquisa"</p>
 
@@ -20,7 +20,7 @@
       <br>
       <br>
       <br>
-      <p style="font-size: 12px;">@ 2024 - Gente e Gestão</p>
+      <p style="font-size: 12px;">@ 2025 - Gente e Gestão</p>
 
       <!-- Mensagem de erro -->
       <div id="erroCodigo" class="alert alert-danger" style="display: none;">
