--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,8 +3,8 @@
 
 <div class="mb-3 d-flex justify-content-between">
   <div>
-    <%= link_to "Nova Importação CSV", new_import_questions_path, class: "btn btn-success me-2" %>
-    <%= link_to "Exportar CSV", export_csv_questions_path, class: "btn btn-outline-primary" %>
+    <%= link_to "Nova Importação CSV", new_import_questions_path, class: "btn btn-sucess-geg" %>
+    <%= link_to "Exportar CSV", export_csv_questions_path, class: "btn btn-sucess-geg" %>
   </div>
 
   <%= button_to "Excluir TODAS as perguntas", destroy_all_questions_path, method: :delete, data: { confirm: "Tem certeza que deseja apagar TODAS as perguntas?" }, class: "btn btn-danger" %>
@@ -13,10 +13,10 @@
 <table class="table table-striped mt-4">
   <thead>
     <tr>
-      <th>Texto</th>
       <th>Tipo</th>
       <th>Categoria</th>
       <th>Etapa</th>
+      <th>Texto</th>
       <th>Tipo de Resposta</th>
       <th>Opções</th>
       <th>Ações</th>
@@ -25,15 +25,17 @@
   <tbody>
     <% @questions.each do |question| %>
       <tr>
-        <td><%= question.text %></td>
-        <td><%= question.question_type %></td>
+        <td><%= question.question_type.humanize %></td>
         <td><%= category_name_for(question) %></td>
         <td><%= question.stage %></td>
+        <td><%= question.text %></td>
         <td><%= question.response_type %></td>
         <td><%= question.options.join(", ") %></td>
-        <td>
-          <%= link_to "Editar", edit_question_path(question), class: "btn btn-sm btn-warning" %>
-          <%= link_to "Excluir", question_path(question), method: :delete, data: { confirm: "Deseja excluir esta pergunta?", turbo: true }, class: "btn btn-sm btn-danger" %>
+        <td class="align-middle">
+          <div class="d-flex justify-content-between gap-2">
+            <%= link_to "Editar", edit_question_path(question), class: "btn btn-sucess-geg" %>
+            <%= link_to "Excluir", question_path(question), method: :delete, data: { confirm: "Deseja excluir esta pergunta?", turbo: true }, class: "btn btn-danger" %>
+          </div>
         </td>
       </tr>
     <% end %>
