--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,6 +19,8 @@
               <%= link_to "Exportar CSV", export_csv_surveys_path, class: "dropdown-item" %>
               <%= link_to "Exportar Excel", export_xlsx_surveys_path, class: "dropdown-item" %>
               <%= link_to "Exportar Questões", export_csv_questions_path, class: "dropdown-item" %>
+              <%= link_to "Painel de Questões", questions_path, class: "dropdown-item" %>
+              <%= link_to "Painel de Formulários", surveys_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
