--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,74 +1,38 @@
-<div class="container mt-4">
-  <div class="row">
-    <div class="col-md-6">
-      <h3>Pesquisa <%= @survey.code %> finalizada!</h3>
-      <h2>&nbsp;</h2>
-      <br>
-      <h4 style="color: #5cb85c;"><strong>Obrigado por participar da pesquisa!</strong></h4>
-      <p>Pronto! Agora você já pode fechar esta janela.</p>
-      <br>
-      <p>Ou caso tenha outros colaboradores, pode-se iniciar outra pesquisa clicando no botão abaixo</p>
-      <p>
-        <%= link_to "INICIAR NOVA PESQUISA >>", root_path, class: 'btn btn-sucess-geg' %>
-      </p>
-      <br>
-      <br>
-      <br>
-      <p style="font-size: 12px;">@ 2024 - Gente e Gestão</p>
+<div class="container">
+  <h1>Respostas da Pesquisa</h1>
+
+  <p><strong>Código da Pesquisa:</strong> <%= @survey.code %></p>
+
+  <% @survey.answers.group_by { |answer| answer.question.category_id }.sort.each do |category_id, answers| %>
+    <div class="mb-4">
+      <h3 class="category-title">
+        <%= "#{category_id} - #{category_name_by_id(category_id)}" %>
+      </h3>
+
+      <ul class="list-group">
+        <% answers.each_with_index do |answer, index| %>
+          <li class="list-group-item">
+            <strong><%= "#{answer.question.category_id}.#{answer.question.stage} - #{answer.question.text}" %></strong><br>
+
+            <% if answer.question.response_type == 'radio' && answer.question.options.any? %>
+              <% if answer.response.present? %>
+                <% option_index = answer.question.options.index(answer.response) %>
+                <% if option_index %>
+                  <span><strong>Resposta:</strong> <%= answer.response.to_s.gsub(/[\[\]\"]/, '').presence || "Não respondida" %></span>>
+                <% else %>
+                  <span><strong>Resposta:</strong> <%= answer.response.to_s.gsub(/[\[\]\"]/, '').presence || "Não respondida" %></span>
+                <% end %>
+              <% else %>
+                <span>Não respondida</span>
+              <% end %>
+            <% else %>
+              <span><strong>Resposta:</strong> <%= answer.response.to_s.gsub(/[\[\]\"]/, '').presence || "Não respondida" %></span>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div>
-  </div>
+  <% end %>
+
+  <%= link_to 'Voltar para o início', root_path, class: 'btn btn-secondary mt-4' %>
 </div>
-
-<script>
-  // Lista de códigos válidos
-  const codigosValidos = [
-    "SFHUQ45P", "JXP74OI7", "OAGGRTOW", "1FG7FWAP", "JZS61MZ4", "XY48AWUH", "2CRJSRVH", "NETAM4GB", "QO9J4253",
-    "6QN4DG5X", "E1QNW4EV", "46XZH7ZM", "9VFD7G2L", "KAUXWR1B", "DHJIIQ1M", "ZVAHGPN7", "1GY7LEVX", "6T00ZB0U",
-    "7HTAQM5A", "TFS8YWY3", "R4D7KS8X", "TICA96I9", "2MKJJWZ8", "LC7F8L0Q", "AFNZ2VK0", "WSQ2ZYH5", "U44VHF9Z",
-    "H5K6CXRR", "HN0PMTMM", "5HHGCPDK", "4WHTP4OF", "884UMDF4", "U1386SLR", "4QA8W3BN", "MI881VMO", "A6MO9JCK",
-    "QOL0G6F3", "L4JLVW6S", "AJYHHPLN", "HBU0MQH6", "7P40IH8C", "RNS79X67", "LBVWFF85", "SODV98Q4", "1OLK48TV",
-    "BAEWXIGW", "LY9QYMAH", "BMPJSB7U", "QD4HSM8O", "HSL66WVQ", "EERHAH23", "TOGCKTWM", "EQFHUNVP", "DCNS7FC1",
-    "HBKZMXJB", "7YENANHJ", "0MX3NOEB", "06XH59UX", "IH9IR2XF", "MIP1MTZT", "6EBMU5FE", "9SW4TALM", "2UR8I1WA",
-    "08MGGA4W", "NWYHEV7M", "A7611WFT", "16ZZFZAH", "C7CKOFRR", "2C1CWS17", "NOA04FF1", "7LYM49ZI", "J1W3PBCT",
-    "RBVRQXKO", "HGPFFMV5", "V3TS7WO3", "ILI0ARCE", "7M470ELB", "BPQD4UHR", "HSRMNP4T", "7LMX2FEF", "4CUFUXS7",
-    "0MNOXTJ6", "9IGPXZ8Y", "KNOFWVF8", "VVKQF4PA", "SS10WYSF", "8ETRIHKA", "VDHL2KLB", "B87JHTZ6", "CRH5S82F",
-    "0MTYTB66", "XTDL8N86", "6NO9LS3S", "WZVSCQ9J", "5XHJM6TE", "Q7OW3B8P", "S940Z4UC", "FJ5EYO10"
-  ];
-
-  // Função para validar o código
-  function validarCodigo() {
-    const codigo = document.getElementById("code").value.toUpperCase(); // Obtém o valor do código, convertendo para maiúsculas
-    if (!codigosValidos.includes(codigo)) {
-      // Exibe a mensagem de erro e impede o envio do formulário
-      document.getElementById("erroCodigo").style.display = "block";
-      return false; // Impede o envio do formulário
-    } else {
-      // Esconde a mensagem de erro caso o código seja válido
-      document.getElementById("erroCodigo").style.display = "none";
-      return true; // Permite o envio do formulário
-    }
-  }
-</script>
-
-
-
-
-<h1>Respostas da Pesquisa</h1>
-
-<p><strong>Código da Pesquisa:</strong> <%= @survey.code %></p>
-
-<% @grouped_answers.sort_by { |category_id, _| category_id }.each do |category_id, answers| %>
-  <div class="mb-4">
-    <h3><%= "Categoria #{category_id} - #{category_name_by_id(category_id)}" %></h3>
-
-    <ul class="list-group">
-      <% answers.each_with_index do |answer, index| %>
-        <li class="list-group-item">
-          <strong><%= "#{index + 1}. #{answer.question.text}" %></strong><br>
-          <span><%= answer.response.presence || "Não respondida" %></span>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-<%= link_to 'Voltar para o início', root_path, class: 'btn btn-secondary mt-4' %>
