--- a/app/views/pages/finish.html.erb
+++ b/app/views/pages/finish.html.erb
@@ -7,14 +7,14 @@
       <h4 style="color: #5cb85c;"><strong>Obrigado por participar da pesquisa!</strong></h4>
       <p>Pronto! Agora você já pode fechar esta janela.</p>
       <br>
-      <p>Ou caso tenha outros colaboradores, pode-se iniciar outra pesquisa clicando no botão abaixo</p>
+      <p>Ou volte para a pagina inicial clicando aqui</p>
       <p>
         <%= link_to "INICIAR NOVA PESQUISA >>", root_path, class: 'btn btn-sucess-geg', data: { turbo: false }, onclick: 'window.location.href = this.href; return false;' %>
       </p>
       <br>
       <br>
       <br>
-      <p style="font-size: 12px;">@ 2024 - Gente e Gestão</p>
+      <p style="font-size: 12px;">@ 2025 - Gente e Gestão</p>
     </div>
   </div>
 </div>
