--- a/app/views/pages/finish.html.erb
+++ b/app/views/pages/finish.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container survey-box">
   <div class="row">
     <div class="col-md-6">
       <h3>Pesquisa <%= @survey.code %> finalizada!</h3>
