--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-sessions">
-  <div class="container py-5">
+  <div class="container survey-box py-5">
     <div class="row">
       <div data-controller="meu-script" data-meu-script-current-tab-value="0" class="col-12">
 
