--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container survey-box">
   <h1>Respostas da Pesquisa</h1>
 
   <p><strong>Código da Pesquisa:</strong> <%= @survey.code %></p>
