--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container survey-box">
   <div class="row">
     <div class="col-md-6">
       <h3>PESQUISA ENGAGEMENT H1 & SERVIÇOS GERAIS 2025</h3>
