--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container survey-box">
 <h1>Editar Pergunta</h1>
 
 <%= form_with model: @question, local: true do |form| %>
