--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container survey-box">
 <h1>Perguntas Cadastradas</h1>
 
 <div class="mb-3 d-flex justify-content-between">
