--- a/app/views/questions/new_import.html.erb
+++ b/app/views/questions/new_import.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container survey-box">
   <h1>Importar Perguntas via CSV</h1>
 
   <%= form_with url: import_questions_path, multipart: true, local: true do |form| %>
