--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container survey-box">
   <h2>Pesquisas</h2>
   <table class="table table-striped table-responsive border rounded-2">
     <thead>
