--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,12 @@
 <div class="container mt-4">
   <div class="row">
-    <div class="col-md-6">
-      <h3>PESQUISA ENGAGEMENT + CENSO 2024</h3>
+    <div class="col-md-6 text-center mx-auto">
+      <h3>PESQUISA ENGAGEMENT H2 & CENSO 2025</h3>
       <h2>&nbsp;</h2>
 
-      <p style="font-size: 12px;"><strong>Vigência de 01 de Novembro à 30 de Novembro de 2024</strong></p>
+      <p style="font-size: 12px;"><strong>Vigência de 27 de Outubro à 28 de Novembro de 2025.</strong></p>
       <br>
-      <p style="font-size: 12px;">Informe o código de oito dígitos fornecido e clique em "Iniciar Pesquisa"</p>
+      <p style="font-size: 12px;">Informe o código de oito digitos fornecido e clique em "Iniciar Pesquisa".</p>
 
       <!-- Formulário de pesquisa -->
       <%= form_with url: new_survey_path, method: :get, html: { id: "formPesquisa", onsubmit: "return validarCodigo();" } do %>
@@ -20,7 +20,7 @@
       <br>
       <br>
       <br>
-      <p style="font-size: 12px;">@ 2024 - Gente e Gestão</p>
+      <p style="font-size: 12px;">@ 2025 - Gente e Gestão</p>
 
       <!-- Mensagem de erro -->
       <div id="erroCodigo" class="alert alert-danger" style="display: none;">
