--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon border-bottom shadow-sm">
   <div class="container">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag "logo.png" %>
