--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,8 +17,8 @@
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Exportar CSV", export_csv_surveys_path, class: "dropdown-item" %>
+              <%= link_to "Importar Códigos", survey_codes_path, class: "dropdown-item" %>
               <%= link_to "Exportar Excel", export_xlsx_surveys_path, class: "dropdown-item" %>
-              <%= link_to "Exportar Questões", export_csv_questions_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
